--- a/ccc/estilo.css
+++ b/ccc/estilo.css
@@ -197,11 +197,14 @@ th, td {
     img {
         width: max-content;
         align-items: center;
+        margin: 10px;
     }
 
     .grid-container, .contact{
         grid-template-rows: 1fr 1fr 1fr 1fr;
         grid-template-columns: 1fr;
+        gap: 0px;
+        row-gap: 0px;
     }
 
     .contact{
